--- a/Style.css
+++ b/Style.css
@@ -17,15 +17,15 @@ body {
 }
 
 .logo {
-  width: 50px; /* Adjust the width as needed */
-  height: 50px; /* Maintain the aspect ratio */ /* Ensure the logo behaves like a block element */
+  width: 50px;
+  height: 50px;
   display: block;
 }
 
 .navbar img {
-  width: 20px; /* Adjust the width as needed */
+  width: 80%;
   display: block;
-  margin: 20px auto; /* Center the logo horizontally with top margin */
+  margin: 20px auto;
 }
 
 /* Responsive adjustments */
@@ -59,10 +59,17 @@ body {
   color: white;
 }
 
-.navbar img {
-  width: 80%;
-  display: block;
-  margin: 20px auto;
+#userType {
+  width: 90%;
+  padding: 10px;
+  margin: 10px 5%;
+  border: 1px solid #ccc;
+  background-color: #818d02;
+  font-size: 16px;
+  color: #333;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 .center-nav,
@@ -114,8 +121,22 @@ body {
   margin: 0 10px;
 }
 
+.input input {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
 .user {
   margin-left: 10px;
+}
+
+.user img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
 }
 
 /* Dashboard styles */
@@ -135,6 +156,7 @@ body {
   margin-bottom: 20px;
   text-align: center;
   border-radius: 8px;
+  color: white;
 }
 
 .box p {
@@ -152,6 +174,7 @@ body {
 
 .yellow {
   background-color: #ffff00;
+  color: #333;
 }
 
 .purple {
@@ -191,6 +214,15 @@ body {
   border-bottom: 1px solid #ddd;
 }
 
+.activity th {
+  background-color: #233024;
+  color: white;
+}
+
+.activity td {
+  background-color: #fff;
+}
+
 .activity form {
   margin-top: 20px;
 }
@@ -208,11 +240,12 @@ body {
 .activity form input[type="email"],
 .activity form input[type="date"],
 .activity form select {
-  width: calc(100% - 10px);
+  width: calc(100% - 20px);
   padding: 8px;
   font-size: 16px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  margin: 0 10px;
 }
 
 .activity form button {
@@ -223,8 +256,40 @@ body {
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
+  margin: 10px;
 }
 
 .activity form button:hover {
   background-color: #424843;
+}
+
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+  background-color: #818d02;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: center;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+}
+
+.panel ul {
+  list-style: none;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active,
+.accordion:hover {
+  background-color: #ccc;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+  padding: 0 18px;
+  background-color: #a7a89b;
+  display: none;
+  overflow: hidden;
 }
